# tricycle-sim

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: app.cpp  app.hpp  const.hpp  window.cpp  window.hpp
src/physics/: obstacle.hpp  trike_aabb.cpp  trike_aabb.hpp  trike_physics.cpp  trike_physics.hpp  trike_state.hpp
src/renderer/: font.cpp  font.hpp  hud.cpp  hud.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  obj_loader.cpp  obj_loader.hpp  obj_mesh.cpp  obj_mesh.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
src/tricycle/: tricycle_mesh.cpp  tricycle_mesh.hpp  tricycle_model.cpp  tricycle_model.hpp
